--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,16 @@
 * {
-    font-family: 'Inter', system-ui;
-    color: #0f172a;
-    font-size: 16px;
+    /* margin: 0;
+    padding: 0; */
     line-height: 1.65em;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Inter', system-ui;
+    font-size: 16px;
+    color: #0f172a;
     letter-spacing: -0.1px;
+    padding: 80px 0;
 }
 
 h1 {
@@ -24,7 +31,7 @@ li {
 
 img {
     display: block;
-    width: 800px;
+    width: 100%;
     height: 500px;
     object-fit: cover;
     border: 1px solid rgba(15,23,42,0.2);
@@ -38,14 +45,15 @@ img {
 }
 
 .ingredients {
-    width: 734px;
+    width: 100%;
     background-color: #f3f4f6;
     padding: 2rem;
     border-radius: 0.375rem;
 }
 
 .back-button {
-    margin: 100px 0px;
+    display: inline-block;
+    margin: 1.5rem 0;
     padding: 0.5rem 2.5rem;
     border-radius: 0.375rem;
     background-color: #0f172a;
